qt/gen_qsplitter.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QSplitter QSplitter;
typedef struct QSplitterHandle QSplitterHandle;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QSplitter* QSplitter_new(QWidget* parent);
QSplitter* QSplitter_new2();
QSplitter* QSplitter_new3(int param1);
QSplitter* QSplitter_new4(int param1, QWidget* parent);
QMetaObject* QSplitter_metaObject(const QSplitter* self);
void* QSplitter_metacast(QSplitter* self, const char* param1);
int QSplitter_metacall(QSplitter* self, int param1, int param2, void** param3);
struct miqt_string QSplitter_tr(const char* s);
struct miqt_string QSplitter_trUtf8(const char* s);
void QSplitter_addWidget(QSplitter* self, QWidget* widget);
void QSplitter_insertWidget(QSplitter* self, int index, QWidget* widget);
QWidget* QSplitter_replaceWidget(QSplitter* self, int index, QWidget* widget);
void QSplitter_setOrientation(QSplitter* self, int orientation);
int QSplitter_orientation(const QSplitter* self);
void QSplitter_setChildrenCollapsible(QSplitter* self, bool childrenCollapsible);
bool QSplitter_childrenCollapsible(const QSplitter* self);
void QSplitter_setCollapsible(QSplitter* self, int index, bool param2);
bool QSplitter_isCollapsible(const QSplitter* self, int index);
void QSplitter_setOpaqueResize(QSplitter* self);
bool QSplitter_opaqueResize(const QSplitter* self);
void QSplitter_refresh(QSplitter* self);
QSize* QSplitter_sizeHint(const QSplitter* self);
QSize* QSplitter_minimumSizeHint(const QSplitter* self);
struct miqt_array /* of int */  QSplitter_sizes(const QSplitter* self);
void QSplitter_setSizes(QSplitter* self, struct miqt_array /* of int */  list);
struct miqt_string QSplitter_saveState(const QSplitter* self);
bool QSplitter_restoreState(QSplitter* self, struct miqt_string state);
int QSplitter_handleWidth(const QSplitter* self);
void QSplitter_setHandleWidth(QSplitter* self, int handleWidth);
int QSplitter_indexOf(const QSplitter* self, QWidget* w);
QWidget* QSplitter_widget(const QSplitter* self, int index);
int QSplitter_count(const QSplitter* self);
void QSplitter_getRange(const QSplitter* self, int index, int* param2, int* param3);
QSplitterHandle* QSplitter_handle(const QSplitter* self, int index);
void QSplitter_setStretchFactor(QSplitter* self, int index, int stretch);
void QSplitter_splitterMoved(QSplitter* self, int pos, int index);
void QSplitter_connect_splitterMoved(QSplitter* self, intptr_t slot);
struct miqt_string QSplitter_tr2(const char* s, const char* c);
struct miqt_string QSplitter_tr3(const char* s, const char* c, int n);
struct miqt_string QSplitter_trUtf82(const char* s, const char* c);
struct miqt_string QSplitter_trUtf83(const char* s, const char* c, int n);
void QSplitter_setOpaqueResize1(QSplitter* self, bool opaque);
bool QSplitter_override_virtual_metacall(void* self, intptr_t slot);
int QSplitter_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSplitter_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QSplitter_virtualbase_sizeHint(const void* self);
bool QSplitter_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QSplitter_virtualbase_minimumSizeHint(const void* self);
bool QSplitter_override_virtual_createHandle(void* self, intptr_t slot);
QSplitterHandle* QSplitter_virtualbase_createHandle(void* self);
bool QSplitter_override_virtual_childEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_childEvent(void* self, QChildEvent* param1);
bool QSplitter_override_virtual_event(void* self, intptr_t slot);
bool QSplitter_virtualbase_event(void* self, QEvent* param1);
bool QSplitter_override_virtual_resizeEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QSplitter_override_virtual_changeEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_changeEvent(void* self, QEvent* param1);
bool QSplitter_override_virtual_paintEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QSplitter_override_virtual_devType(void* self, intptr_t slot);
int QSplitter_virtualbase_devType(const void* self);
bool QSplitter_override_virtual_setVisible(void* self, intptr_t slot);
void QSplitter_virtualbase_setVisible(void* self, bool visible);
bool QSplitter_override_virtual_heightForWidth(void* self, intptr_t slot);
int QSplitter_virtualbase_heightForWidth(const void* self, int param1);
bool QSplitter_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QSplitter_virtualbase_hasHeightForWidth(const void* self);
bool QSplitter_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QSplitter_virtualbase_paintEngine(const void* self);
bool QSplitter_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QSplitter_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QSplitter_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QSplitter_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QSplitter_override_virtual_wheelEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QSplitter_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QSplitter_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QSplitter_override_virtual_focusInEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QSplitter_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QSplitter_override_virtual_enterEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_enterEvent(void* self, QEvent* event);
bool QSplitter_override_virtual_leaveEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_leaveEvent(void* self, QEvent* event);
bool QSplitter_override_virtual_moveEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QSplitter_override_virtual_closeEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QSplitter_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QSplitter_override_virtual_tabletEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QSplitter_override_virtual_actionEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_actionEvent(void* self, QActionEvent* event);
void QSplitter_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);