qt/gen_qsplitter.nim


proc fcQSplitter_new(parent: pointer): ptr cQSplitter {.importc: "QSplitter_new".}
proc fcQSplitter_new2(): ptr cQSplitter {.importc: "QSplitter_new2".}
proc fcQSplitter_new3(param1: cint): ptr cQSplitter {.importc: "QSplitter_new3".}
proc fcQSplitter_new4(param1: cint, parent: pointer): ptr cQSplitter {.importc: "QSplitter_new4".}
proc fcQSplitter_metaObject(self: pointer, ): pointer {.importc: "QSplitter_metaObject".}
proc fcQSplitter_metacast(self: pointer, param1: cstring): pointer {.importc: "QSplitter_metacast".}
proc fcQSplitter_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSplitter_metacall".}
proc fcQSplitter_tr(s: cstring): struct_miqt_string {.importc: "QSplitter_tr".}
proc fcQSplitter_trUtf8(s: cstring): struct_miqt_string {.importc: "QSplitter_trUtf8".}
proc fcQSplitter_addWidget(self: pointer, widget: pointer): void {.importc: "QSplitter_addWidget".}
proc fcQSplitter_insertWidget(self: pointer, index: cint, widget: pointer): void {.importc: "QSplitter_insertWidget".}
proc fcQSplitter_replaceWidget(self: pointer, index: cint, widget: pointer): pointer {.importc: "QSplitter_replaceWidget".}
proc fcQSplitter_setOrientation(self: pointer, orientation: cint): void {.importc: "QSplitter_setOrientation".}
proc fcQSplitter_orientation(self: pointer, ): cint {.importc: "QSplitter_orientation".}
proc fcQSplitter_setChildrenCollapsible(self: pointer, childrenCollapsible: bool): void {.importc: "QSplitter_setChildrenCollapsible".}
proc fcQSplitter_childrenCollapsible(self: pointer, ): bool {.importc: "QSplitter_childrenCollapsible".}
proc fcQSplitter_setCollapsible(self: pointer, index: cint, param2: bool): void {.importc: "QSplitter_setCollapsible".}
proc fcQSplitter_isCollapsible(self: pointer, index: cint): bool {.importc: "QSplitter_isCollapsible".}
proc fcQSplitter_setOpaqueResize(self: pointer, ): void {.importc: "QSplitter_setOpaqueResize".}
proc fcQSplitter_opaqueResize(self: pointer, ): bool {.importc: "QSplitter_opaqueResize".}
proc fcQSplitter_refresh(self: pointer, ): void {.importc: "QSplitter_refresh".}
proc fcQSplitter_sizeHint(self: pointer, ): pointer {.importc: "QSplitter_sizeHint".}
proc fcQSplitter_minimumSizeHint(self: pointer, ): pointer {.importc: "QSplitter_minimumSizeHint".}
proc fcQSplitter_sizes(self: pointer, ): struct_miqt_array {.importc: "QSplitter_sizes".}
proc fcQSplitter_setSizes(self: pointer, list: struct_miqt_array): void {.importc: "QSplitter_setSizes".}
proc fcQSplitter_saveState(self: pointer, ): struct_miqt_string {.importc: "QSplitter_saveState".}
proc fcQSplitter_restoreState(self: pointer, state: struct_miqt_string): bool {.importc: "QSplitter_restoreState".}
proc fcQSplitter_handleWidth(self: pointer, ): cint {.importc: "QSplitter_handleWidth".}
proc fcQSplitter_setHandleWidth(self: pointer, handleWidth: cint): void {.importc: "QSplitter_setHandleWidth".}
proc fcQSplitter_indexOf(self: pointer, w: pointer): cint {.importc: "QSplitter_indexOf".}
proc fcQSplitter_widget(self: pointer, index: cint): pointer {.importc: "QSplitter_widget".}
proc fcQSplitter_count(self: pointer, ): cint {.importc: "QSplitter_count".}
proc fcQSplitter_getRange(self: pointer, index: cint, param2: ptr cint, param3: ptr cint): void {.importc: "QSplitter_getRange".}
proc fcQSplitter_handle(self: pointer, index: cint): pointer {.importc: "QSplitter_handle".}
proc fcQSplitter_setStretchFactor(self: pointer, index: cint, stretch: cint): void {.importc: "QSplitter_setStretchFactor".}
proc fcQSplitter_splitterMoved(self: pointer, pos: cint, index: cint): void {.importc: "QSplitter_splitterMoved".}
proc fQSplitter_connect_splitterMoved(self: pointer, slot: int) {.importc: "QSplitter_connect_splitterMoved".}
proc fcQSplitter_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSplitter_tr2".}
proc fcQSplitter_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSplitter_tr3".}
proc fcQSplitter_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QSplitter_trUtf82".}
proc fcQSplitter_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSplitter_trUtf83".}
proc fcQSplitter_setOpaqueResize1(self: pointer, opaque: bool): void {.importc: "QSplitter_setOpaqueResize1".}
proc fQSplitter_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSplitter_virtualbase_metacall".}
proc fcQSplitter_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_metacall".}
proc fQSplitter_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QSplitter_virtualbase_sizeHint".}
proc fcQSplitter_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_sizeHint".}
proc fQSplitter_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QSplitter_virtualbase_minimumSizeHint".}
proc fcQSplitter_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_minimumSizeHint".}
proc fQSplitter_virtualbase_createHandle(self: pointer, ): pointer{.importc: "QSplitter_virtualbase_createHandle".}
proc fcQSplitter_override_virtual_createHandle(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_createHandle".}
proc fQSplitter_virtualbase_childEvent(self: pointer, param1: pointer): void{.importc: "QSplitter_virtualbase_childEvent".}
proc fcQSplitter_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_childEvent".}
proc fQSplitter_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QSplitter_virtualbase_event".}
proc fcQSplitter_override_virtual_event(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_event".}
proc fQSplitter_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QSplitter_virtualbase_resizeEvent".}
proc fcQSplitter_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_resizeEvent".}
proc fQSplitter_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QSplitter_virtualbase_changeEvent".}
proc fcQSplitter_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_changeEvent".}
proc fQSplitter_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QSplitter_virtualbase_paintEvent".}
proc fcQSplitter_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_paintEvent".}
proc fQSplitter_virtualbase_devType(self: pointer, ): cint{.importc: "QSplitter_virtualbase_devType".}
proc fcQSplitter_override_virtual_devType(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_devType".}
proc fQSplitter_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QSplitter_virtualbase_setVisible".}
proc fcQSplitter_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_setVisible".}
proc fQSplitter_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QSplitter_virtualbase_heightForWidth".}
proc fcQSplitter_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_heightForWidth".}
proc fQSplitter_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QSplitter_virtualbase_hasHeightForWidth".}
proc fcQSplitter_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_hasHeightForWidth".}
proc fQSplitter_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QSplitter_virtualbase_paintEngine".}
proc fcQSplitter_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_paintEngine".}
proc fQSplitter_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_mousePressEvent".}
proc fcQSplitter_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_mousePressEvent".}
proc fQSplitter_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_mouseReleaseEvent".}
proc fcQSplitter_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_mouseReleaseEvent".}
proc fQSplitter_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_mouseDoubleClickEvent".}
proc fcQSplitter_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_mouseDoubleClickEvent".}
proc fQSplitter_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_mouseMoveEvent".}
proc fcQSplitter_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_mouseMoveEvent".}
proc fQSplitter_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_wheelEvent".}
proc fcQSplitter_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_wheelEvent".}
proc fQSplitter_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_keyPressEvent".}
proc fcQSplitter_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_keyPressEvent".}
proc fQSplitter_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_keyReleaseEvent".}
proc fcQSplitter_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_keyReleaseEvent".}
proc fQSplitter_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_focusInEvent".}
proc fcQSplitter_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_focusInEvent".}
proc fQSplitter_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_focusOutEvent".}
proc fcQSplitter_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_focusOutEvent".}
proc fQSplitter_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_enterEvent".}
proc fcQSplitter_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_enterEvent".}
proc fQSplitter_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_leaveEvent".}
proc fcQSplitter_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_leaveEvent".}
proc fQSplitter_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_moveEvent".}
proc fcQSplitter_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_moveEvent".}
proc fQSplitter_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_closeEvent".}
proc fcQSplitter_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_closeEvent".}
proc fQSplitter_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_contextMenuEvent".}
proc fcQSplitter_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_contextMenuEvent".}
proc fQSplitter_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_tabletEvent".}
proc fcQSplitter_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_tabletEvent".}
proc fQSplitter_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_actionEvent".}
proc fcQSplitter_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_actionEvent".}
proc fQSplitter_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_dragEnterEvent".}
